Fix auth page spacing

--- a/static/css/auth.css
+++ b/static/css/auth.css
@@ -81,6 +81,7 @@ header {
 
 footer {
     background-color: rgba(var(--background-variable-opacity), .9);
+    margin-top: 5%;
 }
 
 
